# url-parser

./: README.md  pyproject.toml  requirements.txt  setup.py
tests/: test_amazon.py  test_amazon_pt.py
url_parser/: __init__.py  abstractions.py  exceptions.py  options.py  parser.py
url_parser/marketplaces/: amazon.py  amazon_pt.py  rihappy.py
url_parser/models/: query_url.py  sku_url.py
